--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,19 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - uses: fregante/setup-git-user@v2
+      - uses: actions/download-artifact@v4
+        with:
+          path: dist/
       - uses: ./
         id: version
       - if: steps.version.outputs.bumped == "true"
-        run: |-
-          gh release create v${{ steps.version.outputs.next }} --generate-notes
-          git tag --force v${{ steps.version.outputs.major }}
-          git push --force v${{ steps.version.outputs.major }}
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.version.outputs.next }}
+          generate_release_notes: true
+      - if: steps.version.outputs.bumped == "true"
+        uses: JasonEtco/build-and-tag-action@v2
+        with:
+          tag_name: v${{ steps.version.outputs.next }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
