--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,20 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - run: yarn lint
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - run: yarn test
   dist:
     runs-on: ubuntu-latest
     needs: [lint, test]
     steps:
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - run: yarn build
       - uses: actions/upload-artifact@v4
