--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/ncc": "^0.38.1",
     "eslint": "9.x",
     "globals": "^15.7.0",
+    "prettier": "^3.3.3",
     "typedoc": "^0.26.6",
     "typedoc-github-theme": "^0.1.2",
     "typedoc-plugin-merge-modules": "^6.0.0",
